Adding SVR and sorting notebooks.

--- a/03. covid_brazil_LSTM_detrend.ipynb
+++ b/03. covid_brazil_LSTM_detrend.ipynb
@@ -720,7 +720,7 @@
     "Naive_results = pd.DataFrame(naive_model_results, index=['Naive'])\n",
     "\n",
     "results = pd.concat([Naive_results, LSTM_results])\n",
-    "# results.to_csv(f'Data\\Results\\{BASE_NAME}_results.csv', sep=';')"
+    "results.to_csv(f'Data\\Results\\{BASE_NAME}_results.csv', sep=';')"
    ]
   }
  ],
